--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="mobile">
            <div>Mobile user , GO TO HOME PAGE
             </div>
-            <div> <a href="https://inspiring-davinci-0b5cd4.netlify.app/"><button>Home</button></a></div>
+            <div> <a href="https://anupammaurya6767.github.io/hoarders_mobile/"><button>Home</button></a></div>
         </div>
     <main id="main">
         <div id="header">
